# BatteryProbe.ai

./: .gitignore  .pylintrc  README.md  clean_sessions.ipynb  data_exploration_ali.ipynb  params.toml  pyproject.toml  run_experiments.py
.github/workflows/: python-ci.yml
batteryprobe/: .data.py.swp  .loops.py.swp  data.py  loops.py  models.py  utils.py
data/data/: battery_temp_10k.csv
notebook/: Time_series_forecasting.ipynb  WindowDataset.ipynb  notebook_ali.ipynb  notebook_joran.ipynb  prototyping_add_context.ipynb  prototyping_progressive_bound.ipynb  tf_tutorial_ali.ipynb
utils/: download.sh  merge_tables.py
