[tool.poetry]
name = "batteryprobe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
numpy = "^1.19.4"
matplotlib = "^3.3.2"
tqdm = "^4.51.0"
scikit-learn = {version = "^0.23.2", extras = ["sklearn"]}
torch = "^1.7.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pylint = "^2.6.0"
tensorboard = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
